Wuxuu dib u noqay badalkii oo sameeyay  [[Special:Contributions/Ninculuslovewarsheekh|Ninculuslovewarsheekh]] ([[User talk:Ninculuslovewarsheekh|talk]]) kuna celiyay badalkii ka  danbeeyay oo sameeyay  [[User:196.201.197.82|196.201.197.82]]

--- a/Caynaba.mw
+++ b/Caynaba.mw
@@ -15,7 +15,7 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            =Somaliland ssc
+|pushpin_map            =Somaliland
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
 |pushpin_map_caption    =Halka ay dhacdo Somaliland
@@ -28,7 +28,7 @@
 |government_footnotes   =
 |government_type        ='''mayor'''
 |leader_title           ='''mayor'''
-|leader_name= '''Eng cabdikariin cali shaakir''' 
+|leader_name= '''Eng axmedqani Cabdi xaji yusuf''' 
 |established_title      =  
 |established_date       = 
 |area_magnitude         = 
@@ -57,7 +57,6 @@
 |footnotes              = 
 |coordinates            = {{coord|9|55|0|N|47|15|0|E|region:SO-TO|display=inline,title}}
 }}
-Sanad 2016
 
 
 
@@ -68,7 +67,33 @@ waana magaalo qadiimi ah waxa kuyaal ceelka caynaba oo Somaliland oo dhan
 ka caana waa gobol shidaal leh iyo macdan]]
 
 ==Qabiilka degan==
-'''Caynaba''' waa magaalo qadiim ah waxaana degga Beesha [[dhulbahante]], gaar ahaan ree hagar. Sida [[aadan hagar]] [[faarax hagar]]waxaana sidoo kale dega jaamac siyaad .sida. reer 
-[[Reer warsame]] [[reer samakaab]]
+'''Caynaba''' waa magaalo qadiim ah waxaana degga Beesha [[Habarjeclo]], gaar ahaan Muuse Abokor. Sida [[Cali barre]] [[idarays muuse]]
+[[Biciide]] [[maxamed barre]] [[cumar jibriil]] iyo [[solomadow]] 
+==Taariikhdi hore caynaba==
+Waa mid kamida magaalooyinka ugu da wayn somaliland  oo aad u caan ah waxa ay ku taalaa meel istaraji ah oo waxa mara laamiga dheer ee isku xidha dalkii somalia la isku odhan jiray. Tirada dadka degan imika waxa lagu qiyaasaa ilaa 100.0000 kun oo qof.
+Caynaba waxa ay hada noqotay Gobol oo waxa ay caasimad u tahay Gobolka Saraar waxa uu ka tirsan yahay Jamhuuriyadda [[Somaliland]].
+''Taarikhdi hore ee Caynaba'''
+Caynabo, Magaalo Madaxda Gobolka Saraar ee Caynabo waa magaalo ka mid ah magaaloyinka ugu dada weyn ,waxaa ku yaalla ceel jirey intii dad jirey laakiin waxaa la degey wakhti aan ka badnayn Qarni,Gurigii[[File:Caynabo ruins.jpg|thumb|{{en| hadhaga dhismihi u horeyay 100 sano ka hor}}]]
+ Dhismihi ugu horeeyey ee dhagax ahna waxaa dhisay Ingiriiska mudo ku dhow 100 sanadood isagoo ka dhigtay Saldhig Bilays oo ilaa xukuumadii Siyaad Barre isticmaali jirtay,iminkana waxaa kasii taagan Dhowr Gidaar.
 
-Waxa qoray cabdikariin cali shaakir 2016
+Caynabo waxay leedahay ilo biyo wareedyo ay caan kaga tahay gobolada kale ahna biyo durdur ah oo aan kala go in gu, iyo jiilaal taasina ay sababtay in lagaga soo arooro gobolada sool,sanaag,saaxil,togdheer iyo buuhoodle oo ay afarta jiho deris kala tahay.
+
+Caynabo waxay ka mid tahay goboladii uu sanadki 2008 magacaabay madaxweynihii hore ee s/l mud. daahir riyaale kaahin balse waxay noqotay gobolka ugu baaxada weyn leh sagaalka gobol ee soomaaliland ayna ku kasbatay xuduuda dheer ee ay la wadaagto goboladaasi
+
+caynabo waxaa ku yaala ceelka weyn ee caanka ah kaasi oo laga wada yaqaan dhamaanba dhulka ay soomaalidu degto lagan tiriyey gabayo aad tiro badan waxaan maalin walba ka caba xoolo aad u tiro badan oo isugu jira geel,adhi,lo',fardo iyo ugaadha kaleba.
+
+Noocyadeeda kala duwan
+
+Caynabo waxaa ku yaala madaarka weyn ee dabiiciga ah kasi oo ay diyaaraduhu soo fadhiisan jireen xiligii ay dhacday abaartii daba dheer halkaasna dadka qaxoontiga lagaga aad gureyn jiray
+
+si kastaba ha ahaatee caynabo waxay ka mid tahay meelihii ugu horeeyey ee halgan hubaysan lagaga soo horjeesto keli taliskii siyaad barre uuna kuyaalo goobtii la baxday (ninkii wadada sheikh wanaag ku maroow [[wadaamogoo]] ayuu wedkaa yaal. qabiil ahaan waxa dega degmadan, reer yoonis iyo cumar jibril, hjeclo.
+
+Magaalo madaxda gobolka saraar ee caynabo waxay leedahay ilo dhaqaale oo ku tiirsan xoolaha nool iyadoo marba marka ka danbaysa ay sii laanlaabmayaan sayladaha xoolaha lagu kala iibsado caynabo waxay kaalin wax ku ool ah ka gashay fidinta laamaha dawlada iyo idii somaliland ula soo noqon lahayd gobolada sool iyo sanaag bari taasoo ay degan yihiin ciidamada qaranka ka s/land ee doonayey xuduuda wadanka waxaana degmada oog kuyaala taliska guud ee ciidamad aaga bari ee jamhuuriyada somaliland.
+
+ilaa haatan magaalo madaxda gobolka saraar ee caynabo waxaa hoos yimaada 5 degmo iyo 44 tuulo marka aynu usoo noqono ceelka caynaba oo ah goob muhiima ayaa hadana waxaa ka muuqata dayac farabadan oo ku gedaaman ceelka xoolo dhaqatada ku dhaqan gobolka saraar oo iyagu ah dadka ugu badan ee ka soo biyo doonta ceela ayaa cabasho ba,an kamuujiyay ceelkaasi,
+
+waxaa gabi ahaanba usoo biyo doonta wakhtigan oo ah xilli abaareed dhamaan deegaanada ku dhow Magaalada caynabo. dhawaan ayay ahayd markii gobolkan togdheer lagaga dhawaaqay Gudiga horumarinta gobolka saraar lamana oga waxaayka qaban doonaan ceelka caynaba oo kaalin muhiima kaga jira gobolka saraar iyo gobolada kal
+
+[[Category:Soomaaliland]]
+
+Caynabo ruins.jpg
