*Empty MediaWiki Message*

--- a/Template:Infobox_officeholder.mw
+++ b/Template:Infobox_officeholder.mw
@@ -558,7 +558,7 @@
 | succeeding = {{{succeeding5|}}}
 | successor = {{{successor5|}}}
 | taoiseach = {{{taoiseach5|}}}
-| termlabel = {{{term_label5|{{{termlabel5|In office}}}}}}
+| termlabel = {{{term_label5|{{{termlabel5|Xafiiska}}}}}}
 | termend = {{#if:{{{termend5|}}}|{{{termend5}}}|{{{term_end5|}}}}}
 | termstart = {{#if:{{{termstart5|}}}|{{{termstart5}}}|{{{term_start5|}}}}}
 | term = {{{term5|}}}
@@ -789,7 +789,7 @@
 | succeeding = {{{succeeding8|}}}
 | successor = {{{successor8|}}}
 | taoiseach = {{{taoiseach8|}}}
-| termlabel = {{{term_label8|{{{termlabel8|In office}}}}}}
+| termlabel = {{{term_label8|{{{termlabel8|Xafiiska}}}}}}
 | termend = {{#if:{{{termend8|}}}|{{{termend8}}}|{{{term_end8|}}}}}
 | termstart = {{#if:{{{termstart8|}}}|{{{termstart8}}}|{{{term_start8|}}}}}
 | term = {{{term8|}}}
@@ -866,7 +866,7 @@
 | succeeding = {{{succeeding9|}}}
 | successor = {{{successor9|}}}
 | taoiseach = {{{taoiseach9|}}}
-| termlabel = {{{term_label9|{{{termlabel9|In office}}}}}}
+| termlabel = {{{term_label9|{{{termlabel9|Xafiiska}}}}}}
 | termend = {{#if:{{{termend9|}}}|{{{termend9}}}|{{{term_end9|}}}}}
 | termstart = {{#if:{{{termstart9|}}}|{{{termstart9}}}|{{{term_start9|}}}}}
 | term = {{{term9|}}}
@@ -943,7 +943,7 @@
 | succeeding = {{{succeeding10|}}}
 | successor = {{{successor10|}}}
 | taoiseach = {{{taoiseach10|}}}
-| termlabel = {{{term_label10|{{{termlabel10|In office}}}}}}
+| termlabel = {{{term_label10|{{{termlabel10|Xafiiska}}}}}}
 | termend = {{#if:{{{termend10|}}}|{{{termend10}}}|{{{term_end10|}}}}}
 | termstart = {{#if:{{{termstart10|}}}|{{{termstart10}}}|{{{term_start10|}}}}}
 | term = {{{term10|}}}
