--- a/António_Guterres.mw
+++ b/António_Guterres.mw
@@ -1,7 +1,79 @@
-[[File:António Guterres - 2019 (48132270313) (cropped).jpg|thumb]]
-'''António Manuel de Oliveira Guterres''' (wuxuu dhashey 30 Abriil 1949) waa siyaasiga Boortaqiiska iyo diblomaasi u shaqeynayay Xoghayaha Guud ee Sagaal ee [[Qaramada Midoobay]]. Wuxuu xubin ka ahaa Xisbiga Socialist Party, wuxuu soo noqday Raiisel Wasaaraha Portugal 1995 ilaa 2002.
+{{Infobox officeholder
+| name = António Guterres
+| honorific-suffix = 
+| honorific_prefix = [[Mudane]]
+| image = António Guterres - 2019 (48132270313) (cropped).jpg
+| caption = Guterres in 2019
+| office = 9aad [[Xoghayaha Guud ee Qaramada Midoobay]]
+| deputy = [[Aamina J. Maxamed|Aamina Maxamed]]
+| term_start = 1 janaayo 2017
+| term_end = 
+| predecessor = [[Ban Ki-moon]]
+| successor = 
+| office1 = [[Hay'adda Qaxootiga ee Qaramada Midoobay]]
+| 1blankname1 = {{nowrap|Secretary-General}}
+| 1namedata1 = [[Kofi Annan]]<br />[[Ban Ki-moon]]
+| term_start1 = 15 juun 2005
+| term_end1 = 31 Desembar 2015
+| predecessor1 = [[Ruud Lubbers]]
+| successor1 = [[Filippo Grandi]]
+| office2 = [[Prime Minister of Portugal]]<!-- Please do not add his order, it is against WP:MOS, unused and clutter, only exception is the President of the United States. -->
+| president2 = [[Mário Soares]]<br />[[Jorge Sampaio]]
+| term_start2 = 28 Oktobar 1995
+| term_end2 = 6 Abriil 2002
+| predecessor2 = [[Aníbal Cavaco Silva]]
+| successor2 = [[José Manuel Barroso]]
+| office3 = Madaxweynaha [[Socialist International]]
+| term_start3 = 10 Nofembar 1999
+| term_end3 = 15 juun 2005
+| predecessor3 = [[Pierre Mauroy]]
+| successor3 = [[George Papandreou]]
+| office4 = [[Secretary-General of the Socialist Party (Portugal)|Secretary-General of the Socialist Party]]
+| president4 = {{nowrap|[[António de Almeida Santos]]}}
+| term_start4 = 23 Febaraayo 1992
+| term_end4 = 21 Janaayo 2002
+| predecessor4 = [[Jorge Sampaio]]
+| successor4 = [[Eduardo Ferro Rodrigues]]
+| office5 = [[Hogaamiyaha Mucaaradka (Portugal)|Hogaamiyaha Mucaaradka]]
+| primeminister5 = [[Aníbal Cavaco Silva]]
+| term_start5 = 23 Febaraayo 1992
+| term_end5 = 28 Oktoobar 1995
+| predecessor5 = [[Jorge Sampaio]]
+| successor5 = [[Fernando Nogueira]]
+| office6 = [[Xubin ka ah Golaha Jamhuuriyadda (Bortuqal)|Xubin ka ah Golaha Jamhuuriyadda]]
+| term_start6 = 3 juun 1976
+| term_end6 = 4 April 2002
+| constituency6 = [[Castelo Branco District|Castelo Branco]]
+| birth_name = António Manuel de Oliveira Guterres
+| birth_date = {{birth date and age|1949|4|30|df=y}}
+| birth_place = [[Lisbon]], [[Estado Novo (Portugal)|Portugal]]
+| death_date = 
+| nationality = Bortuqiis
+| party = [[Socialist Party (Portugal)|Socialist]]
+| spouse = {{marriage|Luísa Guimarães e Melo|1972|1998|reason=d.}}<br />{{marriage|[[Catarina Vaz Pinto]]|2001}}
+| children = 2
+| alma_mater = [[Instituto Superior Técnico]] - [[University of Lisbon]]
+| website = {{url|antonioguterres.gov.pt|António Guterres}}
+| signature = Assinatura António Guterres.svg
+}}'''António Manuel de Oliveira Guterres''' (wuxuu dhashey 30 Abriil 1949) waa siyaasi Boortuqiis iyo diblomaasi u shaqeynayay Xoghayaha Guud ee Sagaalaad ee [[Qaramada Midoobay]]. Wuxuu xubin ka ahaa Xisbiga Socialist Party, wuxuu soo noqday Raiisel Wasaaraha [[Bortuqaal]] 1995 ilaa 2002.
 
-Guterres wuxuu soo noqday xoghayihii guud ee xisbiga hantiwadaaga laga soo bilaabo 1992 - 2002 Kadib 6 sano oo ay xukunka haysay iyada oo aan aqlabiyad buuxda lahayn hadana ay ku sii dartay dhaqaale xumo, xisbiga Guterres ee hantiwadaaggu wuxuu la kulmay guuldarro culus oo ka xun sidii la filayay sababtoo ah khasaarihii ka dhacay magaalooyinka waaweyn ee Lisbon iyo Porto, halkaas oo codbixinta lagu muujiyey PS. horseed adag. [[Eduardo Ferro Rodrigues]] ayaa la wareegay hoggaanka xisbiga Socialist Party, laakiin doorashadii guud waxaa looga adkaaday xisbiga Social Democratic Party ee uu hoggaamiyo [[José Manuel Barroso]].
+Guterres wuxuu soo noqday xoghayihii guud ee xisbiga hantiwadaaga laga soo bilaabo 1992 - 2002 Kadib 6 sano ayuu xukunka haayay isaga oo aan aqlabiyad buuxda lahayn oo hadana ku sii dartay dhaqaale xumo, xisbiga Guterres ee hantiwadaaggu wuxuu la kulmay guuldarro culus oo ka xun sidii la filayay sababtoo ah khasaarihii ka dhacay magaalooyinka waaweyn ee [[Lisbon]] iyo [[Borto]], halkaas oo codbixinta lagu muujiyey PS. horseed adag. [[Eduardo Ferro Rodrigues]] ayaa la wareegay hoggaanka xisbiga Socialist Party, laakiin doorashadii guud waxaa looga adkaaday xisbiga Social Democratic Party ee uu hoggaamiyo [[José Manuel Barroso]].
 
-Wuxuu soo noqday madaxweynaha Socialist International laga soo bilaabo 1999, wuxuuna ku sii nagaaday ka dib markii uu waayey doorkiisii Raiisel Wasaaraha, ilaa 2005. Wuxuu ahaa Wakiilka Sare ee Qaxootiga ee Qaramada Midoobay laga soo bilaabo 2005 ilaa 2015. Labada codeyn ee 2012 iyo 2014, labadaba. Dadweynaha Boortaqiiska waxay u doorteen inuu noqdo ra'iisul wasaaraha ugu wanaagsan 30-kii sano ee la soo dhaafay.
-[[Category:Qaramada Midoobay]]
+Wuxuu soo noqday madaxweynaha [[Socialist International]] laga soo bilaabo 1999, wuxuuna ku sii nagaaday ka dib markii uu waayey doorkiisii Raiisel Wasaaraha, ilaa 2005. Wuxuu ahaa Wakiilka Sare ee Qaxootiga ee Qaramada Midoobay laga soo bilaabo 2005 ilaa 2015. Labada doorasho ee 2012 iyo 2014. Dadweynaha Boortaqiiska waxay u doorteen inuu noqdo ra'iisul wasaaraha ugu wanaagsan 30-kii sano ee la soo dhaafay.
+
+==Taariikh nololeed==
+
+
+
+
+
+
+
+
+
+
+
+
+==Tixraac==
+
+[[Category:Qaramada Midoobay]] [[Category:Dadka bortuqiiska]]
