--- a/Oog.mw
+++ b/Oog.mw
@@ -1,4 +1,17 @@
-[[File:Cali barre muuse abokor habarjeclo.jpg|thumb|{{en|1=oog waxa iska leh beesha cali barre}}]],
-[[Oog]]... degmada oo waxay ka tirsan tahay gobolka saraar waxana dega [[cali barre]] oo magalada majority ka ah sido kale waxa degan  biciide degmada waxa Galbeed ka xiga magalada [[caynaba]] dhanka waqooyi [[badweyn]] koonfur [[habariheshay]]
+'''Oog'''  waa degmo ka tirsan gobolka [[Sool]] ee [[somaliland]], degmada waxa Galbeed ka xiga magalada [[caynaba]] dhanka waqooyi [[badweyn]] koonfur [[habariheshay]]
 
-Degmada waxa kasoo jeda wasir ki hore ee [[maxamuud xaashi cabdi]] suldan haji suudi oo ahaa aasaasihi darawishta ....
+Degmada waxa kasoo jeda wasir ki hore ee [[maxamuud xaashi cabdi]] iyo [[suldan haji suudi]] oo ahaa aasaasihi darawishta.
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{Degmooyinka Gobolka Sool}}
