*Empty MediaWiki Message*

--- a/Jasiira_(Qaahiro).mw
+++ b/Jasiira_(Qaahiro).mw
@@ -2,12 +2,10 @@
 [[File:Zamalek Arial.jpg|thumb|450px|gezira jassirada ,Magalo Masar]]
 [[File:Ile de Gezira.jpg|thumb|450px|Map of Gezira.]]
 
-Jassirada Gezira, Masar
+'''Jasiira''' waa jasiirad ku taal [[Webiga Niil]] ee bartamaha magaalada Qaahira ee [[Masar]] . Qeybta koonfureed ee jasiiradda waxaa ku taala degmada Jasiira, qeybta saddexaad ee waqooyiga neh waxaa ku yaal degmada Zamalek .
 
-{{Flag|Egypt}}
 
 
-gezira, gudaha egypt, gobolka cario, jasiiradda cario oo leh magaalooyin badan, biyo ayaa ku hagaya med med dhinaca woqooyi iyo sudan iyo bariga afrika koonfurta, oo leh guriga egyptian opera house iyo carro munaaradaha jasiiradda gezira.
 
 
 
@@ -83,15 +81,6 @@ gezira, gudaha egypt, gobolka cario, jasiiradda cario oo leh magaalooyin badan, 
 
 
 
+{{gumud}}
 
-
-
-
-
-
-
-==Sido kale fiiri==
-
-* [[Wadada Rd Number 1 Somaliland]]
-* [[Wadada Beyoğlu Turkiga]]
-* [[Wadada Preah Sisowath Phnom Penh Kambodia,]]
+[[Category:Jasiirada jasiira]] [[Category:Masar]]
