*Empty MediaWiki Message*

--- a/Itoobiya.mw
+++ b/Itoobiya.mw
@@ -12,7 +12,7 @@
 |Dawladda                       = &nbsp;
 |darajo_hogaamiye1             =  [[Madaxweyne]]
 |darajo_hogaamiye2             =  [[Ra'iisul wasaare]] 
-|magac_hogaamiye1              = [[Girma Wolde-Giorgis]]
+|magac_hogaamiye1              = [[Sahle-Work Zewde]]
 |magac_hogaamiye2              = [[Abiy Ahmed]],
 |sovereignty_type              = 
 |sovereignty_note              = 
