*Empty MediaWiki Message*

--- a/Bartire.mw
+++ b/Bartire.mw
@@ -10,6 +10,6 @@ Meelaha ee dhulka soomaaliya ka degaan waxaa ka mid ah degmada [[Xagar]] ee gobo
 Waxaa kale oo deggan qabiillo kale oo Bartire ah sida reer Xirsi Garaad farah , iyo Timacase iyo Xasan Sacad iyo rer saleebaan
 
 == '''Bartiraha dega soomaliya''' ==
-55% waa xoolo dhaqato 20% waa magaalo joog (qaasatan Afmadow  iyo Dhoobley) 15% waa beeraley, 10% waaxay  ku firdhisanyihiin dhammaan aduunka oo dhan. beeshu waxay xiriir wanaagsan la leedahay beelaha kale ee dariska la ah ha ahaadeen kuwa ay abtirwadaagaan iyo kuwa kale oo ay dhaqan wadaagaanba, waxaa jira dhaqano soo jireen ah oo adag oo asalkoodu ka soo jeedawaa Abdiwali Ahmed Hussein {Adam Dubad} oo Ah hogaanka sare ee beesha bartire, waa nin Dhalinyare ah oo aad u da yar oo firficoon furfuran wax ku bartay dalka Sweden iyo dalka dalka bariga african waa nin Dhaqaalyahan ah oona ah ganacsade beesha bartire waa dad aad u dagan waa qomiyad jacel Nabada iyo Horumarka bartire waxaa ka dhashay dad halyeey ah oo la yaqaana tariikhda somalida ku Qoran
+55% waa xoolo dhaqato 20% waa magaalo joog (qaasatan Afmadow  Dhoobley kismaayo  bu'aale iyo xagar) 15% waa beeraley, 10% waaxay  ku firdhisanyihiin dhammaan aduunka oo dhan. beeshu waxay xiriir wanaagsan la leedahay beelaha kale ee dariska la ah ha ahaadeen kuwa ay abtirwadaagaan iyo kuwa kale oo ay dhaqan wadaagaanba, waxaa jira dhaqano soo jireen ah oo adag oo asalkoodu ka soo jeedawaa Abdiwali Ahmed Hussein {Adam Dubad} oo Ah hogaanka sare ee beesha bartire, waa nin Dhalinyare ah oo aad u da yar oo firficoon furfuran wax ku bartay dalka Sweden iyo dalka dalka bariga african waa nin Dhaqaalyahan ah oona ah ganacsade beesha bartire waa dad aad u dagan waa qomiyad jacel Nabada iyo Horumarka bartire waxaa ka dhashay dad halyeey ah oo la yaqaana tariikhda somalida ku Qoran
 
 [[Category:Qabaa'ilada Soomaaliya]]
