*Empty MediaWiki Message*

--- a/Salva_Kiir_Mayardit.mw
+++ b/Salva_Kiir_Mayardit.mw
@@ -1,3 +1,63 @@
-[[File:Salva_Kiir_Mayardit.jpg|thumb]]
+{{redirect|Kiir|Bahr al-Arab}}
+{{short description|Madaxweynaha koonfurta suudaan (2011-hadda)}}
+{{Dinka name|Kiir}}
+{{Infobox officeholder
+| name = Salva Kiir Mayardit
+| image = Salva Kiir Mayardit.jpg
+|order=1st
+| office = Madaxweynaha koonfurta suudaan
+| vicepresident = [[Riek Machar]] <small>(2011–13)</small> <br />[[James Wani Igga]] <small>(2013–2016)</small> <br />[[Riek Machar]] <small>(April–July 2016)</small><br />[[Taban Deng Gai]] <small>(July 2016–February 2020)</small><br />[[Riek Machar]] <small>(February 2020-present)</small><ref name="sudantribune_vp">{{Cite web|url=https://sudantribune.com/spip.php?article69017|title=President Kiir appoint Machar FVP ahead of South Sudan new cabinet - Sudan Tribune: Plural news and views on Sudan|website=sudantribune.com}}</ref>
+| term_start = 9 July 2011
+| term_end = 
+| predecessor = Booska waxaa loo asaasay ([[Cumar al-Bashiir]]) Madaxweynaha Suudaan iyo Isaga oo ah Madaxweynaha Koonfurta Suudaan)
+| successor = 
+| office1 = [[Liiska madaxdaxweynayaasha koonfurta suudaan|Madaxweynaha koonfurta suudaan]]
+| vicepresident1 = [[Riek Machar]]
+| term_start1 = 30 July 2005
+| term_end1 = 9 July 2011<br />{{small|Acting: 30 July 2005 – 11 August 2005}}
+| predecessor1 = [[John Garang]]
+| successor1 = Position abolished
+| office2 = [[Madaxweyne ku xigeenka suudaan|Madaxweyne ku xigeenka Koowaad ee Suudaan]]
+| president2 = [[Omar al-Bashir]]
+| term_start2 = 11 August 2005
+| term_end2 = 9 July 2011
+| predecessor2 = [[John Garang]]
+| successor2 = [[Ali Osman Taha]]
+| office3 = Madaxweyne ku xigeenka Koonfurta Suudaan
+| president3 = [[John Garang]]
+| term_start3 = 9 July 2005
+| term_end3 = 11 August 2005
+| predecessor3 = Position established
+| successor3 = [[Riek Machar]]
+| birth_date = {{birth date and age|1951|09|13}}
+| birth_place = [[Gogrial|Gogrial district]], [[Warrap (state)|Warrap state]], [[Anglo-Egyptian Sudan]]<br />{{small|(now [[Gogrial State]], [[South Sudan]])}}
+| death_date = 
+| death_place = 
+| blank2 = Sidoo kale loo yaqaan
+| data2 = Kiir Kuethpiny Thiik Atem
+| spouse = Mary Ayen Mayardit<ref>[http://www.sudantribune.com/spip.php?article50469 ''Sudan Tribune'', Kenyan police arrest S. Sudan president’s son over drunkenness]</ref> <br />
+Aluel William Nyuon Bany (2014-?)<ref>{{Cite web | url=http://www.sde.co.ke/amp/thenairobian/article/2000114864/our-family-life-is-private-kiir-s-in-law-says | title="Our family life is private" Kiir's in-law says - Entertainment News}}</ref>
+| party = [[Sudan People's Liberation Movement]]
+| blank1 = Diinta
+| data1 = [[Catholic Church|Roman Catholicism]]<ref>{{cite web |last=Sheikholeslami |first=Ali |title=Who Is Salva Kiir? |url=http://www.euronews.com/2011/01/15/who-is-salva-kiir/ |work=Euronews.com |date=January 1, 2011}}</ref>
+}}
 '''Salva Kiir Mayardit''' (wuxuu dhashay 13 Sebtember 1951), oo sidoo kale loo yaqaan '''Salva Kiir''', waa siyaasi South Sudan ah oo madaxweyne u ahaa [[Koonfurta Suudaan]] ilaa xornimadeeda sanadkii 2011. Xornimada ka hor, wuxuu ahaa Madaxweynaha Dowlada Koonfurta Suudaan, sidoo kale waxaa loo magacaabay Madaxweyne kuxigeenka Koowaad ee Suudaan, laga soo bilaabo 2005 ilaa 2011. Waxaa loo magacaabay Taliyaha Guud ee Ciidamada Jabhada Xoreynta Sudan (SPLA) 2005, kadib dhimashadii [[John Garang]].
-[[Category:Gumud]]
+
+==Taariikh nololeed==
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{gumud}}
+==Tixraac==
+[[Category:Madaxdaxweynayaasha koonfurta suudaan]] [[Category:Koonfurta Suudaan]]
