--- a/Bacaad_weyne.mw
+++ b/Bacaad_weyne.mw
@@ -59,7 +59,7 @@
 |website                = 
 |footnotes              = 
 }}
-'''Bacad weyne''' waa Degmo ka´tirsan gobolka Mudug, waana magaalo facweyn oo ku caan ah barashada diinta islaamka sidoo kale waa magaalo ganacsi oo waxay caan ku tahay cusbada iyadoo loo iib geeyo dhamaan gobolada kale ee dalka soomaaliya iyo waliba Ethiopia. Waa degmo caan ku ah biyaha iyo daaqa. (GREEN ZONE) sidoo kale waa Degmo caan ku ah wax soo saaraka dalaga beeraha iyo dhaqashada xoolaha sida geela ariga iyo Lo'da. Xoolaha degmadaan waxaa loo iib geeyaa dhamaan gobolada kale ee dalka iyo waliba dalka Saudi Arabia. Waxaa xiriir ganacsi oo aad u facweyn la leh degmadaan shirkada dhoofinta xoolaha ee indho deero oo ah shirkada kaliya ee heysata ogolaanshaha dhoofinta xoolaha ee deegaankan. 
+'''Bacad weyne''' waa Degmo katirsan gobolka Mudug, waana magaalo facweyn oo ku caan ah barashada diinta islaamka sidoo kale waa magaalo ganacsi oo waxay caan ku tahay cusbada iyadoo loo iib geeyo dhamaan gobolada kale ee dalka soomaaliya iyo waliba Ethiopia. Waa degmo caan ku ah biyaha iyo daaqa. (GREEN ZONE) sidoo kale waa Degmo caan ku ah wax soo saaraka dalaga beeraha iyo dhaqashada xoolaha sida geela ariga iyo Lo'da. Xoolaha degmadaan waxaa loo iib geeyaa dhamaan gobolada kale ee dalka iyo waliba dalka Saudi Arabia. Waxaa xiriir ganacsi oo aad u facweyn la leh degmadaan shirkada dhoofinta xoolaha ee indho deero oo ah shirkada kaliya ee heysata ogolaanshaha dhoofinta xoolaha ee deegaankan. 
 waxa kaloo taga dad fara badan oo kayimaada dalal kala duwan 
 Degmadaan waxaa daga beesha (Qubeys ee Surre, Dir) 
 
