*Empty MediaWiki Message*

--- a/Ugaas_Yaasiin_Ugaas_Cabdirixmaan.mw
+++ b/Ugaas_Yaasiin_Ugaas_Cabdirixmaan.mw
@@ -1,7 +1,7 @@
 {{Infobox monarch
 | name            = Ugaas Yaasiin Ugaas Cabdirixmaan <br  /> أغاس ياسين أغاس عبد رحمن    
 | title           = Ugaaskii 28-aad ee Beelaha [[Dishiishe]] ahaanna Ugaaska guud ee Beelaha [[Harti]] Ahna Ugaaskii Xukumi jiray Boosaaso
-| image           =
+| image           =[[File:Ugas yasin.jpg|thumb|Ugas yasin]]
 
 | reign           = 1940–2000
 | coronation      =
