Noqay bedelaadka 203734 ee sameeyay  [[Special:Contributions/Gaudio|Gaudio]] ([[User talk:Gaudio|hadal]])

--- a/Xasuuqii_Wagalla.mw
+++ b/Xasuuqii_Wagalla.mw
@@ -2,7 +2,7 @@
 madaxda kiinyaatiga weediidanaayeen in ee ka hadlaan arintaan oo askartooda dhameesay somalida.
 waxee dhihi jireen 57 qof kaliya aa ku dhimatay meel ee wax qabad ku sameenaayeen.
 
-[[[Oktoobar]] [[2000]], ee madaxda kiinyaatiga qirteen, in ee askartooda ku laayeen dad badan oo soomaali ah, Gobolka wajir.
+[[oktoobar]] [[2000]], ee madaxda kiinyaatiga qirteen, in ee askartooda ku laayeen dad badan oo soomaali ah, Gobolka wajir.
 
 [[Category:Kiinya]]
 [[Category:Taariikh]]
