Replacing Bangla_Script.svg with [[File:বাংলা.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: file renamed or replaced on Commons).

--- a/Bengali.mw
+++ b/Bengali.mw
@@ -1,8 +1,3 @@
-
-
-
-
-
 {{Infobox language
 | name = Bengali
 | altname = Bangla
@@ -31,7 +26,7 @@
 | iso2 = ben
 | iso3 = ben
 | lingua = [http://www.linguasphere.info/lcontao/tl_files/pdf/master/OL-SITE%201999-2000%20MASTER%20ONE%20Sectors%205-Zones%2055-59.pdf <code>59-AAF-u</code>]
-| image = Bangla Script.svg
+| image = বাংলা.svg
 | imagesize = 200px
 | imagecaption = "Bangla" in [[Bengali script]]
 | map = Bengalispeaking region.png
