*Empty MediaWiki Message*

--- a/Dilla.mw
+++ b/Dilla.mw
@@ -22,7 +22,7 @@
 |coordinates_display    =inline,title
 |coordinates_region     =SO-AW
 |subdivision_type       =Country
-|subdivision_name       ={{flag|Somalia}}
+|subdivision_name       ={{flag|Somaliland}}
 |subdivision_type1      =[[Gobol]]
 |subdivision_name1      =[[Awdal]]
 |subdivision_type2      =[[Degmo]]
