*Empty MediaWiki Message*

--- a/Koobka_Adduunka_2026.mw
+++ b/Koobka_Adduunka_2026.mw
@@ -2,7 +2,7 @@
 '''Koobka Adduunka 2026'''
 
 
-[[File:USA-Canada-Mexico 2026 World Cup Bid Logo.svg|thumb|Right|400px]]
+[[File:USA-Canada-Mexico 2026 World Cup Bid Logo.svg|Right|400px]]
 
 * {{Flag|United States}}
 * {{Flag|Canada}}
