--- a/Ugaas_Xasan_Ugaas_Yaasiin.mw
+++ b/Ugaas_Xasan_Ugaas_Yaasiin.mw
@@ -18,7 +18,7 @@
 
 |religion      = [[File:Allah-green.svg|18px]] [[islaam|Islaam (sunni)]]
 }}
-'''Ugaas Xasan Ugaas Yaasiin''' ({{lang-ar|''اوغاس حسن اوغاس ياسين''}}) Wuxuu ka mid yahay isimada dhaqan ee Soomaaliyeed, Wuxuu ugaas guud oo magac saar ah u yahay beelaha Harti, Waana Ugaaska guud ee beesha Dishiishe, Xilka dhaqanka wuxuu kala wareegay Aabihiis ''Ugaas Yaasiin'' 2001 kadib markii aabihiis uu geeriyooday, Sida la sheego aabihiis ayaa u dardaarmay in loo duubo ugaasnimadda kolka uu isagu geeriyoodo.<ref>https://hiiraan.com/news/2010/sept/wararka_maanta7-10937.htm</ref><ref>https://horseedmedia.net/2013/08/24/ugaas-xasan-ugaas-yaasiin-oo-muqdisho-kula-kulmay-odayaal-dhaqansawiro/</ref>
+'''Ugaas Xasan Ugaas Yaasiin''' ({{lang-ar|''اوغاس حسن اوغاس ياسين''}}) Wuxuu ka mid yahay isimada dhaqan ee Soomaaliyeed, Wuxuu ugaas guud oo magac saar ah u yahay beelaha Harti, Waana Ugaaska guud ee beesha Dishiishe, Xilka dhaqanka wuxuu kala wareegay Aabihiis ''Ugaas Yaasiin'' 2001 kadib markii aabihiis uu geeriyooday, Sida la sheego aabihiis ayaa u dardaarmay in loo duubo ugaasnimadda kolka uu isagu geeriyoodo.<ref>https://hiiraan.com/news/2010/sept/wararka_maanta7-10937.htm</ref><ref>https://horseedmedia.net/2013/08/24/ugaas-xasan-ugaas-yaasiin-oo-muqdisho-kula-kulmay-odayaal-dhaqansawiro/</ref><ref>http://allsbc.com/sawirrougaas-xasan-ugaas-yaasiin-oo-bosaso-ugu-sameeyey-qado-sharaf-madaxweyne-farmaajo/</ref>
 
 ==Ugaasnimadda Intaan loo duubin ka hor==
 I-''Dhalasho Iyo Waxbarasho''
@@ -61,3 +61,6 @@ I-''Dhalasho Iyo Waxbarasho''
 *21-25/03/2000 Wuxuu ka qayb galay shirkii aqoonyahannada soomaaliyeed ee lagu qabtay [[Djibouti]].
  
 *09/05/2001-13/06/2000 wuxuu ka qayb galay isagoo wakiil ka ah Ugaaska shirkii dib u heshiisiinta Soomaliyeed ee lagu qabtay Djibouti oo ay kasoo qayb galeen Isimo, aqoonyahanno, siyaasiyiin, ningarbood, haween & Dad farabadan oo Soomaaliyeed.<ref>http://boosaaso.tripod.com/Ugaas_Hasan.htm</ref>
+
+==Tixraac==
+{{reflist}}
