*Empty MediaWiki Message*

--- a/Naasiriya.mw
+++ b/Naasiriya.mw
@@ -4,7 +4,9 @@ Gobalka [[Jubbada Hoose|Jubbada Dhexe]]
 
 Degmada [[Xagar|Buaale]]
 
-Tuulada [[Naasiriya]] waxaay udhaxeysaa magaaloyinka sida [[Bu'aale]] ilaa  [[Afmadow]] iyo  [[Xagar]]  sidokale waxaa udhow  [[Wabiga Jubba]].
+Nasiriya  N 0 .8 220 40
+
+[[Naasiriya]] waxaay udhaxeysaa magaaloyinka sida [[Bu'aale]] ilaa  [[Afmadow]] iyo  [[Xagar]]  sidokale waxaa udhow  [[Wabiga Jubba]].
 
 [[Naasiriya]] waxaa la dagay 2000. Sidokale 
 
