*Empty MediaWiki Message*

--- a/Waaberi.mw
+++ b/Waaberi.mw
@@ -53,6 +53,8 @@ Waaberi waxaa ku yaal Schoolo Dhoor ah oo qadiimi iyo Jadiid waxaa kamid ah:
 * Dugsiga Hoose Dhexe & Sare ee Rajab
 * Dugsiga Hoose Dhexe & Sare ee Al-Mathal
 * Degsiga Hoose Dhexe & Sare ee Maxamuud Mire
+* Dugsiga Hoose Dhexe & Sare ee Ismaan Geedi Raage 
+* Dugsiga Hoose Dhexe & Sare ee Al-Cain
 
 
 {{Degmooyinka Gobolka Banaadir}}
