*Empty MediaWiki Message*

--- a/Liska_Dagaalka_Aasiya.mw
+++ b/Liska_Dagaalka_Aasiya.mw
@@ -7,6 +7,7 @@ Liska Dagaalka [[Aasiya]] :
 * [[Dagaalki Kuwayt Najd]]
 * [[Dagaalki Russka-Jabaan]]
 * [[Yom Kippur War]]
+* [[Isukeenid Goa]]
 * [[Dagaalkii Soofiyeeti ee ka dhacay Afghanistan]]
 * [[Dagaalki Bakistaan iyo Hindika 1947]]
 * [[Dagaalki Bakistaan iyo Hindika 1965]]
