*Empty MediaWiki Message*

--- a/Mukeyle.mw
+++ b/Mukeyle.mw
@@ -7,7 +7,7 @@ Siyaasiyiinta kasoo jeedo degaankan waxaa kamid ah :_
 2-Xasan Geelleey[Gudoomiye kuxigeenkii degmada wanlaweyn waagii cabdullahi yusuf].
 3-Janaraal Cabdisalaan Kurjoow[allaha unaxariistee wuxuu geeriyooday 05/02/2019].
 4-Gaashaanle dhexe Cabdi muudeey barre.
-5-Janaraal Cabdi sheikh faarax.
+5-dable Cabdi sheikh faarax.
 6-JanaraalNuur Shiilaaw.
 7-Gudoomiye Degmo Ibraahim shiikh Cabdulle.
 Iyo kuwoo kale ooaan halkaan kusoo koobi karin .
@@ -39,7 +39,8 @@ Sidookale Degaanka mukeyle waxaa kuyaal dugsiyada diinta lagu barto, iyo iskuulk
 Dhanka mashaaikhda kasoojeedda waxaa kamid ah :-
 ☆SHIIKH YUUSUF QORIYOOW
 ☆SHIIKH FAARAX XASAN(allaha unaxariste)
-☆SHIIKH GAABOOW YUUSUF
+☆sheiikh ugu magacdher gobalka hiiraan ama masajidka beledweyne muxadarada ka aqriyo reer Mukayle 
+Magaciisa waa shiikh cali maskiin  ☆SHIIKH GAABOOW YUUSUF
 ☆SHIIKH IBRAAHIM(allaha unaxariste)
 ☆SHIIKH IBRAAHIM CANSHUUR
 ☆SHIIKH MAXAMED XASAN(MACALIN XUNDOW ALLAHA UNAXARIISTE).
