*Empty MediaWiki Message*

--- a/Katrina_Kaif.mw
+++ b/Katrina_Kaif.mw
@@ -1,5 +1,19 @@
 {{wargelin|Qoraalka bogan waa mid uqoran si qaab daran ama ka samaysan luuqad qalaad. Fadlan naga caawi turjumaada.}}
-'''Katrina Kaif ('''ku dhashay '''Katrina Turquotte''';  16 Luulyo 1983) waa jilaa Ingiriis ah oo ka shaqeysa [[Bollywood|filimada Hindi]]. <ref name="citizen">{{cite news|last=Hafeez|first=Mateen|title=Working in Bollywood for years, but shy of citizenship?|url=http://timesofindia.indiatimes.com/india/Working-in-Bollywood-for-years-but-shy-of-citizenship/articleshow/6458769.cms?referral=PM|accessdate=1 March 2014|work=The Times of India|date=30 August 2010|url-status=live|archiveurl=https://web.archive.org/web/20160117202653/http://timesofindia.indiatimes.com/india/Working-in-Bollywood-for-years-but-shy-of-citizenship/articleshow/6458769.cms?referral=PM|archivedate=17 January 2016|df=}}</ref>  Waxay sameysay Bollywoodka waana mid kamid ah atariishooyinka ugu mushaharka badan [[Hindiya]] <ref>{{Cite web|url=https://www.hindustantimes.com/bollywood/katrina-kaif-pays-highest-advance-tax-among-bollywood-actressses/story-gNuTMpoOiHifrBEH4Nk1TL.html|title=Katrina Kaif pays highest advance tax among Bollywood actresses|first=Dibyojyoti|last=Baksi|date=25 March 2013|website=Hindustan Times|language=en|access-date=20 February 2020}}</ref><ref>{{Cite web|url=http://www.forbesindia.com/celebprofile/katrina-kaif/1439/18|title=Katrina Kaif - Forbes India Magazine|website=Forbes India|language=en|access-date=20 February 2020}}</ref>.{{Infobox person|name=Katrina Kaif|image=Katrina at IIFA 2017 (cropped).jpg|alt=A headshot of Katrina Kaif|caption=|birth_name=Katrina Turquotte|birth_place=[[Ingiriiska Hong Kong]]|height=|birth_date={{birth date and age|df=yes|1983|7|16}}|residence=Mumbai, Hindiya|citizenship=Ingiriiska|occupation=jilaa|works=[[Katrina Kaif filmography|Filmography]]|awards=[[Liiska abaalmarinta iyo magacaabista ay heshay Katrina Kaif|Liis buuxa]]|yearsactive=2003–xaadir}}
+{{Infobox person
+|name=Katrina Kaif
+|image=Katrina at IIFA 2017 (cropped).jpg|alt=A headshot of Katrina Kaif
+|caption=|birth_name=Katrina Turquotte
+|birth_place=[[Ingiriiska Hong Kong]]
+|height=
+|birth_date={{birth date and age|df=yes|1983|7|16}}
+|residence=Mumbai, Hindiya
+|citizenship=Ingiriiska
+|occupation=jilaa
+|works=[[Katrina Kaif filmography|Filmography]]
+|awards=[[Liiska abaalmarinta iyo magacaabista ay heshay Katrina Kaif|Liis buuxa]]
+|yearsactive=2003–xaadir}}
+'''Katrina Kaif ('''ku dhashay '''Katrina Turquotte''';  16 Luulyo 1983) waa jilaa Ingiriis ah oo ka shaqeysa [[Bollywood|filimada Hindi]]. <ref name="citizen">{{cite news|last=Hafeez|first=Mateen|title=Working in Bollywood for years, but shy of citizenship?|url=http://timesofindia.indiatimes.com/india/Working-in-Bollywood-for-years-but-shy-of-citizenship/articleshow/6458769.cms?referral=PM|accessdate=1 March 2014|work=The Times of India|date=30 August 2010|url-status=live|archiveurl=https://web.archive.org/web/20160117202653/http://timesofindia.indiatimes.com/india/Working-in-Bollywood-for-years-but-shy-of-citizenship/articleshow/6458769.cms?referral=PM|archivedate=17 January 2016|df=}}</ref>  Waxay sameysay Bollywoodka waana mid kamid ah atariishooyinka ugu mushaharka badan [[Hindiya]] <ref>{{Cite web|url=https://www.hindustantimes.com/bollywood/katrina-kaif-pays-highest-advance-tax-among-bollywood-actressses/story-gNuTMpoOiHifrBEH4Nk1TL.html|title=Katrina Kaif pays highest advance tax among Bollywood actresses|first=Dibyojyoti|last=Baksi|date=25 March 2013|website=Hindustan Times|language=en|access-date=20 February 2020}}</ref><ref>{{Cite web|url=http://www.forbesindia.com/celebprofile/katrina-kaif/1439/18|title=Katrina Kaif - Forbes India Magazine|website=Forbes India|language=en|access-date=20 February 2020}}</ref>.
+
 Kaif wuxuu ku dhashay Hong Kong, Kaif iyo qoyskeeduba waxay ku noolaayeen dhowr waddan kahor inta aysan u dhaqaaqin London.  Waxay heshay meelayntoodii ugu horeeyey ee naqshadeynta markay ahayd da 'yarta kadibna waxay sii wadday shaqo sidii moodalka moodada.  Bandhig faneed ka socda London, filim sameeyaha [[Kaizad Gustad]] wuxuu arkay Kaif oo wuxuu go'aansaday inuu ku tuuro ''[[Boom]]'' (2003), guul darrooyin culus iyo ganacsi.  Intii filimka Hindiya laga keenay, Kaif wuxuu helay shaqooyin moodisnimo ah wuxuuna aasaasey mustaqbal wanaagsan oo Modeling ah.  Sikastaba, jilayaasha filimku waxay ka gaabsan jireen inay tuuraan iyada oo ay ugu wacan tahay amarkeeda liita ee Hindi.  Kadib markii uu kasoo muuqday filimka [[Telugu]], ''[[Malliswari]]'' (2004), Kaif wuxuu guul ganacsi ah ka gaadhay Bollywoodka asxaabta majaajillada ah ee ''[[Maine Pyaar Kyun Kiya?]]''  (2005) iyo ''[[Namastey London]]'' (2007).  Waxay raacday taxane taxan oo ah filimada guuleys ah, laakiin waxaa lagu dhalleeceeyay ficilkeeda, doorarka soo noqnoqda iyo u janjeedha filimada ay raggu xukumaan.
 
 Kaif wax qabadkeedii masraxa argagixisada ee ''[[New York (filim)|New York]]'' (2009) si wanaagsan ayaa loosiiyay, iyada oo heshay abaalmarinta filimka 'Filmfare Award for Best Actress'.  Ka dib doorka xiddigta ee ''[[Ajab Prem Ki Ghazab Kahani]]'' (2009), ''[[Raajneeti]]'' (2010) iyo ''[[Zindagi Na Milegi Dobara]]'' (2011), waxay heshay abaalmarinkeedii labaad ee 'Filmfare' ee ay ku soo bandhigtay bandhigeedii ''[[Mere Brother Ki Dulhan]]'' (2011).  Filimka 'Kaif' ee ugu sareeya wuxuu la yimid filimka ''[[Ek Tha Tiger]]'' (2012), ''[[Dhoom 3]]'' (2013) iyo ''[[Bang Bang!]]'' (2014), dhammaantoodna waxay ka mid yihiin kuwa ugu sareeya filimada Hindiga ee aadka loo xiiseeyo.
