*Empty MediaWiki Message*

--- a/Katrina_Kaif.mw
+++ b/Katrina_Kaif.mw
@@ -18,6 +18,73 @@ Kaif wuxuu ku dhashay Hong Kong, Kaif iyo qoyskeeduba waxay ku noolaayeen dhowr 
 
 Kaif wax qabadkeedii masraxa argagixisada ee ''[[New York (filim)|New York]]'' (2009) si wanaagsan ayaa loosiiyay, iyada oo heshay abaalmarinta filimka 'Filmfare Award for Best Actress'.  Ka dib doorka xiddigta ee ''[[Ajab Prem Ki Ghazab Kahani]]'' (2009), ''[[Raajneeti]]'' (2010) iyo ''[[Zindagi Na Milegi Dobara]]'' (2011), waxay heshay abaalmarinkeedii labaad ee 'Filmfare' ee ay ku soo bandhigtay bandhigeedii ''[[Mere Brother Ki Dulhan]]'' (2011).  Filimka 'Kaif' ee ugu sareeya wuxuu la yimid filimka ''[[Ek Tha Tiger]]'' (2012), ''[[Dhoom 3]]'' (2013) iyo ''[[Bang Bang!]]'' (2014), dhammaantoodna waxay ka mid yihiin kuwa ugu sareeya filimada Hindiga ee aadka loo xiiseeyo.
 
+[[en: Katrina Kaif]]
+[[ar: كاترينا كيف]]
+[[az: Katrina Kef]]
+[[id: Katrina Kaif]]
+[[ms: Katrina Kaif]]
+[[br: Katrina Kaif]]
+[[ca: Katrina Kaif]]
+[[da: Katrina Kaif]]
+[[de: Katrina Kaif]]
+[[es: Katrina Kaif]]
+[[eu: Katrina Kaif]]
+[[fr: Katrina Kaif]]
+[[it: Katrina Kaif]]
+[[jv: Katrina Kaif]]
+[[sw: Katrina Kaif]]
+[[nl: Katrina Kaif]]
+[[no: Katrina Kaif]]
+[[uz: Katrina Kaif]]
+[[pl: Katrina Kaif]]
+[[pt: Katrina Kaif]]
+[[ro: Katrina Kaif]]
+[[sco: Katrina Kaif]]
+[[simple: Katrina Kaif]]
+[[sh: Katrina Kaif]]
+[[fi: Katrina Kaif]]
+[[sv: Katrina Kaif]]
+[[vi: Katrina Kaif]]
+[[tr: Katrina Kaif]]
+[[vep: Katrina Kaif]]
+[[cs: Katrina Kaifová]]
+[[el: Κατρίνα Κεφ]]
+[[ru: Каиф, Катрина]]
+[[sr: Катрина Кеф]]
+[[tg: Катрина Каиф]]
+[[uk: Катріна Кеф]]
+[[kk: Катрина Каиф]]
+[[hy: Կատրինա Կաիֆ]]
+[[he: קתרינה קאיף]]
+[[ur: کترینہ کیف]]
+[[azb: کاترینا کایف]]
+[[fa: کاترینا کایف]]
+[[arz: كاترينا كيف]]
+[[pnb: کترینہ کیف]]
+[[ps: کټرينا کیف]]
+[[ckb: کاترینا کێف]]
+[[dty: क्याटरिना कैफ]]
+[[ne: क्याटरिना कैफ]]
+[[bh: कैटरीना कैफ]]
+[[mr: कतरिना कैफ]]
+[[mai: क्याटरिना कैफ]]
+[[sa: कैटरीना कैफ]]
+[[hi: कैटरीना कैफ़]]
+[[bn: ক্যাটরিনা কাইফ]]
+[[pa: ਕੈਟਰੀਨਾ ਕੈਫ਼]]
+[[gu: કૅટરિના કૈફ]]
+[[or: କ୍ୟାଟ୍ରିନା କୈଫ]]
+[[ta: கத்ரீனா கைஃப்]]
+[[te: కత్రినా కైఫ్]]
+[[ml: കത്രീന കൈഫ്]]
+[[si: කත්‍රිනා කයිෆ්]]
+[[ka: კატრინა კაიფი]]
+[[zh: 卡特丽娜·卡芙]]
+[[wuu: 卡特丽娜·卡芙]]
+[[ja: カトリーナ・カイフ]]
+[[zh-yue: 卡特麗娜卡芙]]
+[[ko: 카트리나 카이프]]
+
 == filimada ==
 {{Main|Katrina Kaif filmography}}
 
