--- a/Kaaraan.mw
+++ b/Kaaraan.mw
@@ -194,7 +194,7 @@ Kaaraan waa degmo isboorti waxaa ku yaalla garoomo xaafadeed caan ka ah guud aha
 #Barxadaha Boorreey
 #Barxadaha Xeebta Badda [ sansiiriyo ]
 #Baraxadaha Carra guduudda.
-Degmada waxay lahayd kooxo caan ah oo soo saaray ciyaartooy magac iyo maamuusba ku yeeshay guud ahaan isboortiga Soomaaliya, waxaana aka mid ahaa Faynuus, Wajeer, Karaama, iyo khawaa iyo Jabuutti.
+Degmada waxay lahayd kooxo caan ah oo soo saaray ciyaartooy magac iyo maamuusba ku yeeshay guud ahaan isboortiga Soomaaliya, waxaana aka mid ahaa Faynuus, Wajeer, Karaama, iyo khawaaji iyo Jabuutti.
 
 ===Hoteello===
 * Lafweyn
