--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -19,7 +19,7 @@
 |pushpin_label_position =Top
 |pushpin_mapsize        =
 |pushpin_map_caption    ={{flag|Itoobiya}}
-|coordinates_display    =4°57'19"N   45°1'9"E
+|coordinates_display    =[[4°57'19"N   45°1'9"E]]
 |subdivision_type       =Dalka
 |subdivision_name       ={{flag|Itoobiya}}
 |subdivision_type1      =Gobolka
