*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -15,10 +15,10 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            ={{flag|Ethiopia}}
+|pushpin_map            ={{Ethiopia}}
 |pushpin_label_position =Top
 |pushpin_mapsize        =
-|pushpin_map_caption    ={{flag|Itoobiya}}
+|pushpin_map_caption    =
 |coordinates_display    =[[4°57'19"N   45°1'9"E]]
 |subdivision_type       =Dalka
 |subdivision_name       ={{flag|Itoobiya}}
