*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -15,7 +15,7 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            ={{Ethiopia}}
+|pushpin_map            ={{Location Map Ethiopia}}
 |pushpin_label_position =Top
 |pushpin_mapsize        =
 |pushpin_map_caption    =
