*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -19,7 +19,7 @@
 |pushpin_label_position =Top
 |pushpin_mapsize        =
 |pushpin_map_caption    =
-|coordinates_display    =[[4°57'19"N   45°1'9"E]]
+|coordinates_display    ={{coord|05|05|N|45|09|E|region:ET|display=inline,title}}
 |subdivision_type       =Dalka
 |subdivision_name       ={{flag|Itoobiya}}
 |subdivision_type1      =Gobolka
@@ -48,7 +48,7 @@
 |utc_offset_DST         = 
 |latd=4|latm=57|lats=26|latNS=N
 |longd=45|longm=1|longs=23|longEW=E
-|elevation_footnotes    = 
+|elevation_footnotes    ={{coord|05|05|N|45|05|E|region:ET|display=inline,title}} 
 |elevation_m            = 
 |postal_code_type       = 
 |postal_code            =
