--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -15,10 +15,10 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            ={{Location Map Ethiopia}}
+|pushpin_map            ={{coord|05|05|N|45|09|E|region:ET|display=inline,title}}
 |pushpin_label_position =Top
-|pushpin_mapsize        =
-|pushpin_map_caption    =
+|pushpin_mapsize        =9
+|pushpin_map_caption    ={{Ethiopia}}
 |coordinates_display    ={{coord|05|05|N|45|09|E|region:ET|display=inline,title}}
 |subdivision_type       =Dalka
 |subdivision_name       ={{flag|Itoobiya}}
