*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -18,7 +18,7 @@
 |pushpin_map            ={{coord|05|05|N|45|09|E|region:ET|display=inline,title}}
 |pushpin_label_position =Top
 |pushpin_mapsize        =9
-|pushpin_map_caption    ={{Ethiopia}}
+|pushpin_map_caption    =https://www.google.com/maps?sxsrf=ALeKk00nkTvbwMU-6KUwYcF6t_RnTYasGw:1595371907320&q=abaaleey&gs_lcp=ChFtb2JpbGUtZ3dzLXdpei1ocBABGAAyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECdQAFgAYJkoaAFwAHgAgAEAiAEAkgEAmAEAsAEP&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiI363Bt9_qAhXoVBUIHaTxCxIQ_AUoAXoECAwQAQ
 |coordinates_display    ={{coord|05|05|N|45|09|E|region:ET|display=inline,title}}
 |subdivision_type       =Dalka
 |subdivision_name       ={{flag|Itoobiya}}
