*Empty MediaWiki Message*

--- a/Jigjiga.mw
+++ b/Jigjiga.mw
@@ -1,11 +1,11 @@
 {{Coord|09|21|N|42|48|E|region:ET-SO_type:city(98076)|display=title}}
 
 {{Infobox settlement
-|official_name          = Jijiga
+|official_name          = Jig-jiga
 |other_name             = 
 |native_name            = <small>''Jigjiga''</small> <!-- for cities whose native name is not in English -->
 |nickname               = 
-|settlement_type        = Caasimad
+|settlement_type        = Caasimadd
 |motto                  =
 |image_skyline          =Jijiga.jpg
 |imagesize              =250px
@@ -33,11 +33,11 @@
 |pushpin_map_caption    = Meesha ka dhacdo Itoobiya
 |pushpin_mapsize        = 250px
 |coordinates_region     = ET-SO
-|subdivision_type       = [[Itoobiya]]
-|subdivision_type1      = [[Soomaali Galbeed]]
-|subdivision_name1      = [[DDS|Deegaanka Soomaalida]]
-|subdivision_type2      = [[Kilidhka Shanaad]]
-|subdivision_name2      = Degmada Jijiga
+|subdivision_type       = Deegaanka
+|subdivision_type1      = [[Dalka]]
+|subdivision_name1      = {{flag|Itoobiya}}
+|subdivision_type2      = [[Nooca Maamul]]
+|subdivision_name2      = [[Dawlad Deegaan]]
 |subdivision_type3      = 
 |subdivision_name3      = 
 |subdivision_type4      = 
@@ -109,7 +109,9 @@
 |website                = 
 |footnotes              = 
 }} 
-'''Jijiga''' ({{lang-en|Jigjiga}}; [[Amxaari]]: ጅጅጋ) waa [[caasimad]] ku taala gobolka [[Soomaali Galbeed]] ee Galbeedka  wadanka [[Itoobiya|Soomaaliya]]. Jigjiga waxay ka tirsan tahay Gobolka Faafan waxayna 80 km (50 mi) dhinaca Barri kaga beegan tahay magalada [[Harar]]. Sidoo kale, magaaladani waxay dhacdaa 60 km (37 mi) dhinaca Galbeed wadanka [[Soomaaliya]].
+'''Jijiga''' ({{lang-en|Jigjiga}}; [[Amxaari]]: ጅጅጋ) waa [[caasimad|caasimadda]] [[DDS]] amaba [[Soomaali Galbeed]] ee bariga wadanka [[Itoobiya]].Jigjiga waxay ka tirsan tahay Gobolka Faafan waxayna 80 km (50 mi) dhinaca Bari kaga beegan tahay magaalada [[Harar]]. Sidoo kale, magaaladani waxay dhacdaa 60 km (37 mi) dhinaca Galbeed wadanka [[Soomaaliya]].
+
+Waa [[magaalo]] taariikhi ah oo kamid kuwa ugu caansan [[Dhul|dhulka]] ay [[Soomaalida|Soomaalidu]] leedahay,Waana Xarun ganacsi oo muhiim u ah isku xidhka guud ahaanba gobolada Deegaanka Soomaalida iyo Itoobiyada kale sidoo kalena xuduud la leh dalka Soomaaliya gaar ahaan gobolada Waqooyi ee la baxay [[Somaliland|Soomaaliland]] waxaana ay kuxidhantahay dekedda weyn ee Magaalada [[Berbera|Ber]]-[[Berbera|bera]] halkaas oo badeecooyin aad ubadan ay kasoo degtaan una gudbaan dalka Itoobiya iyo deegaanka intiisa kaleba.
 
 == Cimilada Jigjiga ==
 
